# MAOOAM

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_Fortran.cmake  maooam_compiler_flags.cmake
fortran/: CMakeLists.txt  IC.nml  LICENSE.txt  Makefile  README.md  aotensor_def.f90  inprod_analytic.f90  integrator_def.f90  maooam.f90  model_def.f90  params.f90  rk2_ad_integrator.f90  rk2_integrator.f90  rk2_tl_ad_integrator.f90  rk2_tl_integrator.f90  rk4_ad_integrator.f90  rk4_integrator.f90  rk4_tl_integrator.f90  stat.f90  tensor.f90  tensor_def.f90  test_aotensor.f90  test_inprod_analytic.f90  test_tl_ad.f90  tl_ad_tensor.f90  util.f90
fortran/doc/: doxy_conf  gen_doc.md  tl_ad_doc.md
fortran/doc/html/: annotated.html  aotensor__def_8f90_source.html  classIntegrator.html  classIntegrator__inherit__graph.map  classIntegrator__inherit__graph.md5  classRK2Integrator.html  classRK2Integrator__inherit__graph.map  classRK2Integrator__inherit__graph.md5  classRK4Integrator.html  classRK4Integrator__inherit__graph.map  classRK4Integrator__inherit__graph.md5  classTlTensor.html  classTlTensor__inherit__graph.map  classTlTensor__inherit__graph.md5  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  gen__doc_8md_source.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_15.map  inherit_graph_15.md5  inherit_graph_16.map  (+183 more)
fortran/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+35 more)
fortran/doc/latex/: annotated.tex  classIntegrator.eps  classIntegrator.tex  classIntegrator__inherit__graph.md5  classRK2Integrator.eps  classRK2Integrator.tex  classRK2Integrator__inherit__graph.md5  classRK4Integrator.eps  classRK4Integrator.tex  classRK4Integrator__inherit__graph.md5  classTlTensor.eps  classTlTensor.tex  classTlTensor__inherit__graph.md5  hierarchy.tex  index.tex  interfaceintegrator__def_1_1clean__int.tex  interfaceintegrator__def_1_1init__int.tex  interfaceintegrator__def_1_1step__int.tex  md_doc_tl_ad_doc.tex  namespaceaotensor__def.tex  namespaceinprod__analytic.tex  namespaceintegrator__def.tex  namespacemodel__def.tex  namespaceparams.tex  namespacerk2__ad__integrator.tex  namespacerk2__integrator.tex  namespacerk2__tl__integrator.tex  namespacerk4__ad__integrator.tex  namespacerk4__integrator.tex  namespacerk4__tl__integrator.tex  namespaces.tex  namespacestat.tex  namespacetensor__def.tex  namespacetl__ad__tensor.tex  namespaceutil.tex  refman.tex  structaotensor__def_1_1atmoctensor.tex  structaotensor__def_1_1atmoctensor__coll__graph.md5  structinprod__analytic_1_1atmosphereinnerproducts.tex  structinprod__analytic_1_1atmosphereinnerproducts__coll__graph.md5  (+59 more)
fortran_split/: CMakeLists.txt  Makefile_wrapper  aotensor_def.f90  aotensor_def.mod  ic_def.f90  ic_def.mod  inprod_analytic.mod  maooam  maooam.f90  maooam_atmos_wrapper.f90  maooam_wrapper.f90  maooam_wrapper.mod  params.f90  params.mod  rk2_integrator_decoupled.f90  stat.f90  tensor.mod  test_tl_ad  tl_ad_integrator.mod
fortran_split/atmos/: Makefile  aotensor_def.f90  atmos_aotensor_def.mod  atmos_ic_def.mod  atmos_ifport.mod  atmos_inprod_analytic.mod  atmos_integrator.mod  atmos_params.mod  atmos_stat.mod  atmos_tensor.mod  atmos_tl_ad_integrator.mod  atmos_tl_ad_tensor.mod  atmos_util.mod  ic_def.f90  ifport.f90  inprod_analytic.f90  maooam_atmos_wrapper.f90  maooam_atmos_wrapper.mod  params.f90  rk2_integrator_decoupled.f90  rk2_tl_ad_integrator_decoupled.f90  stat.f90  tensor.f90  tl_ad_tensor.f90  util.f90
fortran_split/baseline/: Makefile  Makefile_wrapper  Makefile_wrappers  maooam_ocean_wrapper.f90  maooam_wrapper.f90  params.f90  rk2_integrator.f90  rk2_integrator_decoupled.f90  rk2_tl_ad_integrator_decoupled.f90
fortran_split/coupled/: Makefile  ifport.mod  inprod_analytic.f90  integrator.mod  maooam_coupled_wrapper.f90  rk4_integrator.f90  stat.mod  tl_ad_tensor.mod  util.mod
fortran_split/include/: maooam_coupled_wrapper.mod  maooam_ocean_wrapper.mod
fortran_split/ocean/: Makefile  aotensor_def.f90  ic_def.f90  ifport.f90  inprod_analytic.f90  maooam_ocean_wrapper.f90  ocean_aotensor_def.mod  ocean_ic_def.mod  ocean_ifport.mod  ocean_inprod_analytic.mod  (+15 more)
(+60 files in other folders)
